--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "math": "^0.0.3",
+    "mathjs": "^14.0.1",
     "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1",
+    "natural": "^8.0.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.0.3",
